<resources>
    <string name="file_provider">com.soict.hoangviet.provider</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="default_notification_channel_name" translatable="true">Firebase</string>
    <string name="error_happen">Có lỗi xảy ra. Vui lòng thử lại!</string>
    <string name="share_option">Chọn hình thức chia sẻ</string>

    <!--Tutorial-->
    <string name="tutorial_button">Bắt đầu</string>

    <!--Main-->
    <string name="main_login_title">Đăng nhập</string>
    <string name="main_register_title">Đăng ký</string>

    <!--Login-->
    <string name="login_toolbar_title">Đăng nhập</string>
    <string name="login_email_hint"><b>Email</b></string>
    <string name="login_password_hint"><b>Mật khẩu</b></string>
    <string name="login_button_title">Đăng nhập</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_error">Đăng nhập thất bại. Vui lòng thử lại</string>
    <string name="login_no_account_yet">Không phải thành viên? <u>Đăng ký</u></string>
    <string name="login_social">Đăng nhập bằng</string>

    <!--Register-->
    <string name="register_toolbar_title">Đăng ký</string>
    <string name="register_email_hint"><font size="12">Email</font></string>
    <string name="register_password_hint"><font size="12">Mật khẩu</font></string>
    <string name="register_username_hint"><font size="12">Tên người dùng</font></string>
    <string name="register_phone_hint"><font size="12">Số điện thoại</font></string>
    <string name="register_button_title">Đăng ký</string>
    <string name="register_fullname_empty">Vui lòng nhập họ tên</string>
    <string name="register_email_empty">Vui lòng nhập email</string>
    <string name="register_email_error">Vui lòng nhập email hợp lệ</string>
    <string name="register_phone_empty">Vui lòng nhập số điện thoại</string>
    <string name="register_phone_error">Vui lòng nhập số điện thoại hợp lệ</string>
    <string name="register_password_empty">Vui lòng nhập mật khẩu</string>
    <string name="register_password_error">Mật khẩu phải có ít nhất 6 kí tự bao gồm chữ và số</string>
    <string name="register_success">Đăng ký thành công. Vui lòng đăng nhập</string>
    <string name="register_error">Đăng ký thất bại. Vui lòng thử lại</string>
    <string name="register_member_already">Bạn đã có tài khoản? <font color="#CE93D8">Đăng nhập</font></string>

    <!--Main-->
    <string name="home_toolbar_title">Messenger</string>
    <string name="menu_friends">Bạn bè</string>
    <string name="menu_profile">Cá nhân</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--Profile-->
    <string name="profile_setting_update">Cập nhật thông tin</string>
    <string name="profile_setting_notification">Cài đặt thông báo</string>
    <string name="profile_setting_language">Cài đặt ngôn ngữ</string>
    <string name="profile_setting_changepass">Đổi mật khẩu</string>
    <string name="profile_setting_faq">FAQ</string>
    <string name="profile_setting_contact">Liên hệ</string>

    <!--Active OTP-->
    <string name="active_otp_title_toolbar">Xác thực tài khoản</string>
    <string name="active_otp_title">Xác nhận</string>
    <string name="active_otp_phone">Số điện thoại</string>
    <string name="active_otp_phone_hint"><font size="14">Nhập số điện thoại</font></string>
    <string name="active_otp_code">Mã OTP</string>
    <string name="active_otp_code_hint"><font size="14">Nhập mã OTP xác minh</font></string>
    <string name="active_otp_resend">Lấy lại mã OTP</string>
    <string name="active_otp_send">Lấy mã OTP</string>
    <string name="active_otp_resend_message">Bạn có muốn gửi lại mã OTP?</string>
    <string name="active_otp_code_error">Mã xác thực không đúng. Vui lòng nhập lại</string>
    <string name="active_otp_send_code_error">Có lỗi xảy ra. Vui lòng thử lại</string>
    <string name="active_otp_success">Đăng ký tài khoản thành công</string>
    <string name="active_otp_error">Mã xác thực không đúng. Vui lòng nhập lại</string>

    <!--Update Profile-->
    <string name="update_profile_image_title">Chọn ảnh đại diện</string>
    <string name="update_profile_image_des">Upload Images</string>
    <string name="update_profile_title_name">Tên:</string>
    <string name="update_profile_title_address">Địa chỉ:</string>
    <string name="update_profile_title_phone">SĐT:</string>
    <string name="update_profile_title_email">Email:</string>
    <string name="update_profile_title_gender">Giới tính:</string>
    <string name="update_profile_title_date">Ngày sinh:</string>
    <string name="update_profile_done">Hoàn thành</string>
    <string name="update_profile_error_date">Không thể chọn ngày trong tương lai!</string>
    <string name="update_profile_denied_request">Bạn chưa cấp quyền truy cập bộ nhớ!</string>
    <string name="update_profile_name_empty">Vui lòng nhập họ tên</string>
    <string name="update_profile_birthday_empty">Vui lòng chọn ngày sinh</string>
    <string name="update_profile_avatar_upload_error">Có lỗi xảy ra trong quá trình cập nhật ảnh đại diện</string>
    <string name="update_profile_success">Cập nhật thành công</string>
    <string name="update_profile_error">Cập nhật thất bại. Vui lòng thử lại</string>
    <string name="update_profile_toolbar_title">Cập nhật thông tin</string>
    <string name="message_push_notification_title">Bạn nhận được tin nhắn mới</string>
    <string name="notification_toolbar_title">Thông báo</string>
    <string name="notification_title_screen">Cài đặt thông báo</string>
    <string name="menu_home">Trang chủ</string>

    <!--    change password-->
    <string name="change_password_title">Đổi mật khẩu</string>
    <string name="change_password_old">Mật khẩu cũ</string>
    <string name="change_password_new">Mật khẩu mới</string>
    <string name="change_password_retype">Xác nhận mật khẩu mới</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="change_password_failed">Đổi mật khẩu thất bại.Vui lòng thử lại</string>
    <string name="change_password_old_no_type">Vui lòng nhập mật khẩu cũ!</string>
    <string name="change_password_new_no_type">Vui lòng nhập mật khẩu mới!</string>
    <string name="change_password_retype_no_type">Vui lòng nhập xác nhận mật khẩu mới!</string>
    <string name="change_password_old_error_type">Mật khẩu cũ không đúng định dạng!</string>
    <string name="change_password_new_error_type">Mật khẩu mới không đúng định dạng!</string>
    <string name="change_password_not_exactly">Xác nhận mật khẩu không khớp!</string>
    <string name="change_password_btn_save">Lưu</string>
    <string name="message_adapter_sending">Đang gửi</string>
    <string name="message_adapter_sent">Đã gửi</string>
    <string name="message_adapter_seen">Đã xem</string>
    <string name="update_profile_adapter_male">Nam</string>
    <string name="update_profile_adapter_female">Nữ</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="splash_notification_title">Thông báo!</string>
    <string name="splash_message_alert">Không có kết nối Internet. Vui lòng quay lại khi có kết nối!</string>
    <string name="splash_positive_title">Đồng ý</string>
    <string name="info_message">Nhắn tin</string>
    <string name="info_add_friend">Kết bạn</string>
    <string name="device_not_support">Thiết bị không hỗ trợ tính năng này!</string>
    <string name="toast_no_internet_connection">Không có kết nối Internet</string>

</resources>
