<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:orientation="vertical">

    <com.soict.hoangviet.firebase.custom.CustomFirebaseToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cft_icon="@drawable/ic_back"
        app:cft_title="@string/change_password_title"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding_32_dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/content_padding_32_dp"
            android:textColor="@color/md_black_1000"
            android:textSize="20dp"
            app:errorEnabled="true"
            app:passwordToggleDrawable="@drawable/show_password_selector">

            <EditText
                android:id="@+id/et_change_password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_password_old"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding_32_dp"

            android:layout_marginEnd="@dimen/content_padding_32_dp"
            android:textColor="@color/md_black_1000"
            android:textSize="20dp"
            app:errorEnabled="true"
            app:passwordToggleDrawable="@drawable/show_password_selector">

            <EditText
                android:id="@+id/et_change_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_password_new"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding_32_dp"
            android:layout_marginEnd="@dimen/content_padding_32_dp"
            android:textColor="@color/md_black_1000"
            android:textSize="20dp"
            app:errorEnabled="true"
            app:passwordToggleDrawable="@drawable/show_password_selector">

            <EditText
                android:id="@+id/et_change_password_retype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_password_retype"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="64dp"
            android:background="@drawable/bg_chang_password_save"
            android:gravity="center"
            android:paddingTop="@dimen/content_padding_16_dp"
            android:paddingBottom="@dimen/content_padding_16_dp"
            android:text="@string/change_password_btn_save"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/text_size_20_sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>