<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.soict.hoangviet.firebase.custom.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/margin_32_dp"
            android:src="@drawable/qr"
            app:layout_constraintBottom_toBottomOf="@id/imv_avatar"
            app:layout_constraintEnd_toEndOf="@id/imv_avatar"
            app:layout_constraintStart_toStartOf="@id/imv_avatar"
            app:layout_constraintTop_toTopOf="@id/imv_avatar"
            app:layout_constraintVertical_bias="0.7" />


        <com.soict.hoangviet.firebase.custom.CircleImageView
            android:id="@+id/imv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_32_dp"
            android:src="@drawable/ic_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32_dp"
            android:layout_toRightOf="@id/imv_avatar"
            android:fontFamily="@font/lato_bold"
            android:text="Hoàng Tiến Việt"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_20_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_avatar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24_dp"
            app:cardCornerRadius="@dimen/radius_10_dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintWidth_percent="0.9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.soict.hoangviet.firebase.custom.BaseProfileRow
                    android:id="@+id/row_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowTitle="Số điện thoại:" />

                <com.soict.hoangviet.firebase.custom.BaseProfileRow
                    android:id="@+id/row_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowTitle="Email:" />

                <com.soict.hoangviet.firebase.custom.BaseProfileRow
                    android:id="@+id/row_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowTitle="Giới tính:" />

                <com.soict.hoangviet.firebase.custom.BaseProfileRow
                    android:id="@+id/row_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowTitle="Ngày sinh:" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24_dp"
            android:layout_marginBottom="@dimen/content_padding_20_dp"
            android:paddingBottom="@dimen/content_padding_20_dp"
            app:cardCornerRadius="@dimen/radius_10_dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_info"
            app:layout_constraintWidth_percent="0.9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.soict.hoangviet.firebase.custom.BaseMainProfileRow
                    android:id="@+id/row_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowImage="@drawable/ic_canhan"
                    app:rowItemDetail="@string/profile_setting_update" />

                <com.soict.hoangviet.firebase.custom.BaseMainProfileRow
                    android:id="@+id/row_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowImage="@drawable/ic_thongbao"
                    app:rowItemDetail="@string/profile_setting_notification" />

                <com.soict.hoangviet.firebase.custom.BaseMainProfileRow
                    android:id="@+id/row_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowImage="@drawable/ic_ngonngu"
                    app:rowItemDetail="@string/profile_setting_language" />

                <com.soict.hoangviet.firebase.custom.BaseMainProfileRow
                    android:id="@+id/row_changepass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowImage="@drawable/ic_changepass"
                    app:rowItemDetail="@string/profile_setting_changepass" />

                <com.soict.hoangviet.firebase.custom.BaseMainProfileRow
                    android:id="@+id/row_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowImage="@drawable/ic_faq"
                    app:rowItemDetail="@string/profile_setting_faq" />

                <com.soict.hoangviet.firebase.custom.BaseMainProfileRow
                    android:id="@+id/row_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowImage="@drawable/ic_contact"
                    app:rowItemDetail="@string/profile_setting_contact" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>