<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.soict.hoangviet.firebase.custom.CustomFirebaseToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/content_padding_32_dp"
            android:paddingTop="@dimen/content_padding_16_dp"
            android:paddingEnd="@dimen/content_padding_32_dp">

            <TextView
                android:id="@+id/tv_title_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4_dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/active_otp_phone"
                android:textSize="@dimen/text_size_18_sp" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8_dp"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/lato_bold"
                android:inputType="number"
                android:maxLines="1"
                android:minLines="1"
                android:textColorHint="@color/md_black_1000" />

            <TextView
                android:id="@+id/tv_title_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4_dp"
                android:layout_marginTop="@dimen/margin_32_dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/active_otp_code"
                android:textSize="@dimen/text_size_18_sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/edt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8_dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:minLines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_count_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4_dp"
                    android:fontFamily="@font/lato_heavy"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/edt_otp"
                    app:layout_constraintEnd_toEndOf="@id/edt_otp"
                    app:layout_constraintTop_toTopOf="@id/edt_otp"
                    tools:text="04:50" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/imv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_16_dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_heavy"
                    android:text="@string/active_otp_resend"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/margin_16_dp"
                    android:layout_height="@dimen/margin_16_dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_8_dp"
                    android:src="@drawable/ic_reset" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_16_dp"
            android:background="@drawable/bg_color_primary_no_radius"
            android:fontFamily="@font/lato_heavy"
            android:gravity="center"
            android:padding="@dimen/content_padding_16_dp"
            android:text="@string/active_otp_title"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/text_size_16_sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>